@@ -1,25 +1,0 @@
-package Test::Stream::Reservations;
-
-# {{{ Version Bundles
-package Test::Stream::Bundle::V2;
-package Test::Stream::Bundle::V3;
-package Test::Stream::Bundle::V4;
-package Test::Stream::Bundle::V5;
-package Test::Stream::Bundle::V6;
-package Test::Stream::Bundle::V7;
-package Test::Stream::Bundle::V8;
-package Test::Stream::Bundle::V9;
-package Test::Stream::Bundle::V10;
-package Test::Stream::Bundle::V11;
-package Test::Stream::Bundle::V12;
-package Test::Stream::Bundle::V13;
-package Test::Stream::Bundle::V14;
-package Test::Stream::Bundle::V15;
-package Test::Stream::Bundle::V16;
-package Test::Stream::Bundle::V17;
-package Test::Stream::Bundle::V18;
-package Test::Stream::Bundle::V19;
-package Test::Stream::Bundle::V20;
-# }}}
-
-1;
