@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Remove reservations file
+    - Documentation updates (add missing docs)
+
 1.302011  2015-09-30 21:05:57-07:00 America/Los_Angeles
 
     - Documentation updates, typo fixes
